--- a/index.html
+++ b/index.html
@@ -777,13 +777,20 @@ html, body {
     display: flex;
     flex-direction: column;
   ">
-    <h3 style="margin-top: 0;">Definir Nome</h3>
-    <input id="input-nome-modal" type="text" placeholder="Digite seu nome"
-      style="padding: 10px; border-radius: 5px; border: none; margin-bottom: 10px;" />
-    <div style="display: flex; justify-content: flex-end; gap: 10px;">
-      <button id="cancelar-nome" style="padding: 8px 12px; background: #555; color: white; border: none; border-radius: 4px;">Cancelar</button>
-      <button id="confirmar-nome" style="padding: 8px 12px; background: #5865f2; color: white; border: none; border-radius: 4px;">Salvar</button>
-    </div>
+<h3 style="margin-top: 0;">Definir Nome</h3>
+
+<input
+  id="input-nome-modal"
+  type="text"
+  placeholder="Digite seu nome"
+  maxlength="30"
+  style="padding: 10px; border-radius: 5px; border: none; margin-bottom: 10px; width: 100%;"
+/>
+
+<div style="display: flex; justify-content: flex-end; gap: 10px;">
+  <button id="cancelar-nome" style="padding: 8px 12px; background: #555; color: white; border: none; border-radius: 4px;">Cancelar</button>
+  <button id="confirmar-nome" style="padding: 8px 12px; background: #5865f2; color: white; border: none; border-radius: 4px;">Salvar</button>
+</div>
   </div>
 </div>
     <!-- Menu Dropdown -->
@@ -1796,7 +1803,6 @@ btnCancelar.onclick = () => {
   modalNome.style.display = "none";
 };
 
-// Salvar nome
 btnSalvarNome.onclick = async () => {
   const nome = inputModal.value.trim();
   const user = auth.currentUser;
@@ -1807,7 +1813,12 @@ btnSalvarNome.onclick = async () => {
   }
 
   if (!nome || nome.length < 2) {
-    alert("Digite um nome válido.");
+    alert("Digite um nome válido com pelo menos 2 letras.");
+    return;
+  }
+
+  if (nome.length > 30) {
+    alert("O nome deve ter no máximo 30 caracteres.");
     return;
   }
 
@@ -1820,6 +1831,7 @@ btnSalvarNome.onclick = async () => {
     alert("Erro ao salvar nome.");
   }
 };
+
 
 const btnFecharChat = document.getElementById("chat-fechar");
 
