--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 }
 
 @media (max-width: 768px) {
-  .video-wrapper .scroll-arrow {
-    display: block !important;
+  .scroll-arrow {
+    display: none !important;
   }
 }
 
