--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   background-color: black;
   position: relative;
   border-radius: 8px;
-  overflow: hidden;
+  overflow: visible;
   box-shadow: 0 0 20px #000;
 }
 
@@ -231,7 +231,7 @@ font-family: 'Inter', sans-serif;
 .video-wrapper {
   position: relative;
   width: 100%;
-  overflow: hidden;
+  overflow: visible;
 margin-top: 1 px;
 }
 
@@ -253,11 +253,13 @@ margin-top: 1 px;
 
 .video-row {
   display: flex;
-  overflow-x: scroll;
+  overflow-x: auto;
   scroll-behavior: smooth;
   gap: 1rem;
-  padding: 1rem 3rem;
   scrollbar-width: none; /* Firefox */
+  padding: 1rem 5.2rem;   /* 2rem nas laterais */
+  margin-left: -2rem; 
+  margin-right: -2rem;
 }
 
 @media (max-width: 768px) {
