--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ margin-top: 1 px;
 
 @media (max-width: 768px) {
   .video-row {
-    padding: 1rem 0rem; /* Quase colado — ajuste para 0 se quiser 100% colado */
+  padding: 1rem 5.2rem;   /* 2rem nas laterais */
   }
 }
 
